Add two new recipes and fix typos in previous one
Added recipes "carbonara" and "lemon pie" to the project, using the
same structure as the previous recipe "torikatsu".

They have their respective pictures in img directory.

Also fixed some typos in torikatsu.html file.

With this commit the project has all the needed recipes.

--- a/recipes/torikatsu.html
+++ b/recipes/torikatsu.html
@@ -40,10 +40,10 @@
     </ol>
 
     <p>You can also accompany it with rice or Japanese curry.</p>
-    <p>Thanks for read this, it was a fun and really tasty travel, see you until a next recipe!</p>
+    <p>Thanks for reading this, it was a fun and really tasty travel, see you until a next recipe!</p>
   
     <a href="#top">Return To Top</a>
-    <br /><br />
+    <br> <br>
     <a href="../index.html">Go Back</a>
 </body>
 </html>
