--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <a href="./recipes/torikatsu.html">Torikatsu</a>
-
+        <br>
+        <a href="./recipes/carbonara.html">Spaghetti Carbonara</a>
+        <br>
+        <a href="./recipes/lemonPie.html">Lemon Pie</a>
     </ul>
 </body>
 </html>
